Best Design and Code added

--- a/Home11/src/sass/base/_basic.scss
+++ b/Home11/src/sass/base/_basic.scss
@@ -1,3 +1,11 @@
 p, span, a {
   font-family: "Proxima Nova", Arial, Serif, sans-serif;
 }
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
