--- a/Home11/src/sass/base/_typography.scss
+++ b/Home11/src/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Proxima Nova";
-  src: url(fonts/Proxima-Nova-Black.otf);
+  src: url(fonts/Proxima-Nova.otf);
 }
 
 @font-face {
