--- a/Home11/src/sass/main.scss
+++ b/Home11/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/nav-menu';
 @import 'components/buttons';
 @import 'components/start-screen';
+@import 'components/best-design-and-code';
 
 @import 'layout/grid';
 @import 'layout/header';
