--- a/Home11/src/sass/components/_buttons.scss
+++ b/Home11/src/sass/components/_buttons.scss
@@ -6,4 +6,12 @@
   border-radius: 25px;
   background-image: linear-gradient(74deg, #49007c 0%, #e70088 100%);
   padding: 10px 30px;
+
+
+  &:hover {
+    opacity: 0.85;
+    transition: opacity 2s ease-in 0.3s;
+    text-decoration: none;
+    color: #ffffff;
+  }
 }
