What we do? added

--- a/Home11/src/sass/main.scss
+++ b/Home11/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/buttons';
 @import 'components/start-screen';
 @import 'components/best-design-and-code';
+@import 'components/what-we-do';
 
 @import 'layout/grid';
 @import 'layout/header';
