--- a/Home11/src/sass/main.scss
+++ b/Home11/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'components/start-screen';
 @import 'components/best-design-and-code';
 @import 'components/what-we-do';
+@import 'components/carousel';
 
 @import 'layout/grid';
 @import 'layout/header';
