--- a/Home11/src/sass/main.scss
+++ b/Home11/src/sass/main.scss
@@ -12,6 +12,8 @@
 @import 'components/best-design-and-code';
 @import 'components/what-we-do';
 @import 'components/carousel';
+@import 'components/about-us';
+@import 'components/footer';
 
 @import 'layout/grid';
 @import 'layout/header';
