--- a/Home11/src/sass/components/_about-us.scss
+++ b/Home11/src/sass/components/_about-us.scss
@@ -24,27 +24,35 @@
 }
 
 .card-about-us {
-  span {
-    color: #ffffff;
-    font-family: Roboto, Arial, Serif, sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 36px;
-  }
-  p {
-    color: #949494;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 30px;
-  }
   text-align: center;
 }
 
+.name {
+  color: #ffffff;
+  font-family: Roboto, Arial, Serif, sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  @media (max-width: 349px) {
+    font-size: 18px;
+
+  }
+}
+
+.about-person {
+  color: #949494;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 30px;
+  @media (max-width: 349px) {
+    font-size: 14px;
+  }
+}
+
 .image-card {
+  @media (min-width: 446px) {
   position: relative;
   left: calc(50% - 135px / 2);
 }
-
-@media (max-width: 767.99px) {
-  
+  display: none;
 }
