--- a/Home10/src/sass/main.scss
+++ b/Home10/src/sass/main.scss
@@ -3,7 +3,10 @@
 @import 'utils/variables';
 @import 'utils/mixins';
 
+@import 'components/header';
+
 @import 'base/basic';
+@import 'base/typography';
 
 @import 'layout/grid';
 @import 'layout/header';
