Home10 lets-rock-slider done

--- a/Home10/src/sass/main.scss
+++ b/Home10/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'utils/mixins';
 
 @import 'components/header';
+@import 'components/lets-rock';
 
 @import 'base/basic';
 @import 'base/typography';
