Home10 upcoming and video done

--- a/Home10/src/sass/main.scss
+++ b/Home10/src/sass/main.scss
@@ -5,6 +5,9 @@
 
 @import 'components/header';
 @import 'components/lets-rock';
+@import 'components/introducing';
+@import 'components/buttons';
+@import 'components/upcoming-content';
 
 @import 'base/basic';
 @import 'base/typography';
