Home10 instagram done

--- a/Home10/src/sass/main.scss
+++ b/Home10/src/sass/main.scss
@@ -8,6 +8,8 @@
 @import 'components/introducing';
 @import 'components/buttons';
 @import 'components/upcoming-content';
+@import 'components/staying-in-hearts';
+@import 'components/songs';
 
 @import 'base/basic';
 @import 'base/typography';
