Home10 work is done, but need some fix

--- a/Home10/src/sass/main.scss
+++ b/Home10/src/sass/main.scss
@@ -10,6 +10,9 @@
 @import 'components/upcoming-content';
 @import 'components/staying-in-hearts';
 @import 'components/songs';
+@import 'components/our-apps';
+@import 'components/subscribe';
+@import 'components/footer';
 
 @import 'base/basic';
 @import 'base/typography';
